# flakes

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  default.nix  flake.nix  linux_packages.nix  overlay.nix  packages.nix  ra-overlay.nix
.github/containers/updater/: Cargo.toml
.github/containers/updater/src/: github.rs  main.rs
.github/containers/updater/src/github/: types.rs
.github/workflows/: update-flake-lock.yaml  validate.yaml
lib/: hashicorp-generic.nix
modules/: neo4j-apoc.nix  neo4j-plugins.nix
modules/home-manager/: pushover.nix
templates/: rust-wasm.nix
templates/fat/: flake.nix
templates/rust-lite/: flake.nix
templates/rust-wasm/: flake.nix
tests/: neo4j-apoc.nix  neo4j-plugins.nix
