[package]
name = "updater"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.21"
gjson = "0.7"
ureq = { version = "2", features = ["json"] }
serde = { version = "1", features = ["derive"] }
retry = { version = "1", features = ["random"] }

[dependencies.tera]
version = "1"
default-features = false
